--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <button><a href="">Social Media</a></button>
         </div>
         <!-- footer start -->
-
+        <footer>
+            <img src="anka.ico" alt="" id="Anka">
+        </footer>
 
 
 
